Fixing image displaying when right aligned.

--- a/packages/assets/scss/01-atoms/_figure.scss
+++ b/packages/assets/scss/01-atoms/_figure.scss
@@ -147,6 +147,13 @@
     &--x-small,
     &--small {
       width: calc(50% - 15px);
+
+      &.ma__figure--no-wrap.ma__figure--right {
+        @media ($bp-small-min) {// 621~
+          margin-left: 50%;
+          padding-left: 0;
+        }
+      }
     }
   }
 
@@ -190,6 +197,13 @@
 
     @media ($bp-small-min) {// 621~
       width: calc(50% - 15px);
+    }
+
+   &.ma__figure--no-wrap.ma__figure--right {
+      @media ($bp-small-min) {// 621~
+        margin-left: 50%;
+        padding-left: 0;
+      }
     }
 
   }
